# TMA4215

./: GradientDescent.ipynb  pyproject.toml
Maple/: TMA4215 - Ex4 - Task2.mw
Prosjekter/: project2.ipynb
Øvinger/: exercise1.ipynb  exercise2.ipynb  exercise3.ipynb  exercise4.ipynb  exercise6.ipynb  exercise7.ipynb
Øvinger/.ipynb_checkpoints/: exercise4-checkpoint.ipynb
